apps/web/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr

    spec:
      containers:
      - name: sonarr
        # https://github.com/linuxserver/docker-sonarr/releases/latest
        image: lscr.io/linuxserver/sonarr:4.0.16.2944-ls301
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "5Gi"
            cpu: "2000m"
        ports:
        - containerPort: 8989
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /mnt/media
        - name: sabnzbd
          mountPath: /mnt/sabnzbd
      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: sonarr-media-pvc
      - name: sabnzbd
        persistentVolumeClaim:
          claimName: sonarr-sabnzbd-pvc
      - name: config
        hostPath:
          path: /mnt/kubernetes-data/sonarr-config # This path contains the same files on all nodes 
          type: DirectoryOrCreate
