apps/web/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr-web
spec:
  selector:
    app: sonarr-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8989
  type: ClusterIP
