apps/web/sonarr/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: web
  name: &appname sonarr-web
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: ingress-route-match
      priority: 10
      services:
        - name: *appname
          port: 80
      middlewares:
        - name: authentik-forwardauth-media
  tls:
    secretName: sonarr-cert
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: web
  name: sonarr-web-authentik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: ingress-route-authentik
      priority: 15
      services:
          - kind: Service
            name: authentik-server
            port: 80
      middlewares:
        - name: https-only
  tls:
    secretName: sonarr-cert
